Adapted to latest PW changes to "button on top". Fixed issue with fancybox preview showing behind fixed header. Fixed issue with ui dialogs having transparent background.

--- a/templates-admin/styles/JqueryUI/JqueryUI.css
+++ b/templates-admin/styles/JqueryUI/JqueryUI.css
@@ -59,7 +59,7 @@
 .ui-widget { font-family: Arial,sans-serif; font-size: 1.3em; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial,sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid #cccccc; background: #ffffff color: #7596af; }
+.ui-widget-content { border: 1px solid #cccccc; background: #ffffff; color: #7596af; }
 .ui-widget-content a { color: #7596af; }
 .ui-widget-header { border: 1px solid #000000; background: #1f2428 url(images/ui-bg_highlight-soft_50_1f2428_1x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
 .ui-widget-header a { color: #ffffff; }
