--- a/templates-admin/styles/ui.css
+++ b/templates-admin/styles/ui.css
@@ -63,13 +63,18 @@
 	}
 
 	.Inputfields .ui-widget-header {
-		padding: 0.25em 0 0.25em 1em; 
-	}
-
-		.Inputfields .InputfieldStateToggle span.ui-icon {
-			float: right; 
-			padding-right: 0.25em; 
+			padding: 0.25em 0 0.25em 1em; 
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-o-user-select: none;
+			user-select: none;
 		}
+	
+			.Inputfields .InputfieldStateToggle span.ui-icon {
+				float: right; 
+				padding-right: 0.25em; 
+			}
 
 	.Inputfields > li > .ui-widget-content > p {
 		margin-top: 0; 
@@ -118,11 +123,15 @@
 			margin: 1em 1em 0 0; 
 			padding: 6px 11px; 
 			cursor: pointer; 
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
 		}
-
+		p > a > .ui-button {
+			font-size: 0.923076923076923em;
+		}
 		a .ui-button {
 			display: block;
 		}
+
 
 	.Inputfields .InputfieldCheckboxes input,
 	.Inputfields .InputfieldRadios input {
